# devvapi

./: README.md  pyproject.toml  setup.cfg
apps/: core.py
conf/: main.py
handlers/: request.py
setup/_dirs/: __init__.py  startapp.py  startproject.py
setup/_write/: __init__.py  app.py  apps.py  lib.py  manage.py  settings.py
setup/default/: manage.py
setup/default/app/: app.py
setup/default/conf/: settings.py
setup/default/swagger/: index.html
src/devvapi/: .gitignore  __init__.py
src/devvapi.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/devvapi/apps/: core.py
src/devvapi/base/: run.py
src/devvapi/conf/: main.py
src/devvapi/core/: management.py
src/devvapi/handlers/: request.py
src/devvapi/setup/: devvapi.py
src/devvapi/setup/_dirs/: newversion.py
src/devvapi/setup/_write/: __init__.py  app.py  apps.py  manage.py  settings.py
src/devvapi/setup/default/app/: app.py  views.py
src/devvapi/setup/default/conf/: apps.py
